feat(notification-service): migrate to Spring Boot 3
- javax.* → jakarta.* across all imports (validation, mail)
- javax.mail → jakarta.mail: replaced com.sun.mail:javax.mail with
  jakarta.mail (via spring-boot-starter-mail which pulls
  jakarta.mail:jakarta.mail-api + org.eclipse.angus:angus-mail)
- Spring Security 6 JWT resource-server: replaced @EnableResourceServer /
  ResourceServerConfigurerAdapter / OAuth2FeignRequestInterceptor with
  SecurityFilterChain + oauth2ResourceServer().jwt()
- Replaced @EnableOAuth2Client with managed OAuth2 client starter
- @EnableGlobalMethodSecurity → @EnableMethodSecurity
- CustomConversions → MongoCustomConversions
- MediaType.APPLICATION_JSON_UTF8_VALUE → APPLICATION_JSON_VALUE
- Assert.hasLength single-arg → two-arg (removed in Spring 6)
- Replaced com.sun.security.auth.UserPrincipal with lambda Principal
- Replaced ImmutableList/ImmutableMap with java.util.List.of/Map.of
- Replaced commons-lang DateUtils with java.time
- JUnit 4 → JUnit 5 across all test classes
- Embedded MongoDB: flapdoodle spring3x auto-config + version property
- commons-lang3 bumped to 3.17.0 for flapdoodle/commons-compress compat
- Disabled Spring Cloud Config in test bootstrap.yml

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>